--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p><a href="mailto:sisimanukhadgi@gmail.com">sisimanu@gmail.com</a></p>
+                    <p><a href="mailto:sisimanukhadgi@gmail.com">sisimanukhadgi@gmail.com</a></p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
@@ -115,4 +115,5 @@
     </footer>
 </body>
 </html>
+
 
