--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="social-links">
                 <a href="https://www.instagram.com/sisis_pamz?igsh=aXRmb2kxNXJnaHVp" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/sisi.manu.509" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="mailto:sisimanu@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:sisimanukhadgi@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </section>
@@ -115,5 +115,6 @@
     </footer>
 </body>
 </html>
+
 
 
